// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecretsOps createSecret() 0: Create pem encoded secret: esv-frodo-test-secret4 - success 1`] = `
{
  "_id": "esv-frodo-test-secret4",
  "activeVersion": "1",
  "description": "Frodo Test PEM encoded Secret Four Description",
  "encoding": "pem",
  "lastChangeDate": "2024-01-20T04:37:11.44642748Z",
  "lastChangedBy": "6bac97fb-0665-4ba9-b66c-1cf70e074d72",
  "loaded": false,
  "loadedVersion": "",
  "useInPlaceholders": true,
}
`;

exports[`SecretsOps createSecret() 1: Create new version of pem encoded secret: esv-frodo-test-secret4 - success 1`] = `
{
  "createDate": "2024-01-20T04:37:12.045979Z",
  "loaded": false,
  "status": "ENABLED",
  "version": "2",
}
`;

exports[`SecretsOps createSecret() 3: Create base64hmac encoded secret: esv-frodo-test-secret-5 - success 1`] = `
{
  "_id": "esv-frodo-test-secret-5",
  "activeVersion": "1",
  "description": "description5",
  "encoding": "base64hmac",
  "lastChangeDate": "2024-01-20T04:37:12.742925426Z",
  "lastChangedBy": "6bac97fb-0665-4ba9-b66c-1cf70e074d72",
  "loaded": true,
  "loadedVersion": "1",
  "useInPlaceholders": false,
}
`;

exports[`SecretsOps exportSecret() 1: Export secret1 1`] = `
{
  "meta": Any<Object>,
  "secrets": {
    "esv-frodo-test-secret-1": {
      "_id": "esv-frodo-test-secret-1",
      "activeVersion": "1",
      "description": "description1",
      "encoding": "generic",
      "lastChangeDate": "2024-01-20T04:37:09.476689Z",
      "lastChangedBy": "6bac97fb-0665-4ba9-b66c-1cf70e074d72",
      "loaded": false,
      "loadedVersion": "",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`SecretsOps exportSecret() 2: Export secret2 1`] = `
{
  "meta": Any<Object>,
  "secrets": {
    "esv-frodo-test-secret-2": {
      "_id": "esv-frodo-test-secret-2",
      "activeVersion": "1",
      "description": "description2",
      "encoding": "generic",
      "lastChangeDate": "2024-01-20T04:37:10.148332Z",
      "lastChangedBy": "6bac97fb-0665-4ba9-b66c-1cf70e074d72",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": false,
    },
  },
}
`;

exports[`SecretsOps exportSecrets() 1: Export all secrets 1`] = `
{
  "meta": Any<Object>,
  "secrets": {
    "esv-frodo-test-secret-1": {
      "_id": "esv-frodo-test-secret-1",
      "activeVersion": "1",
      "description": "description1",
      "encoding": "generic",
      "lastChangeDate": "2024-01-20T04:37:09.476689Z",
      "lastChangedBy": "6bac97fb-0665-4ba9-b66c-1cf70e074d72",
      "loaded": false,
      "loadedVersion": "",
      "useInPlaceholders": true,
    },
    "esv-frodo-test-secret-2": {
      "_id": "esv-frodo-test-secret-2",
      "activeVersion": "1",
      "description": "description2",
      "encoding": "generic",
      "lastChangeDate": "2024-01-20T04:37:10.148332Z",
      "lastChangedBy": "6bac97fb-0665-4ba9-b66c-1cf70e074d72",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": false,
    },
    "esv-test-secret-cert-pem": {
      "_id": "esv-test-secret-cert-pem",
      "activeVersion": "1",
      "description": "This is a test secret from a pem encoded cert file.",
      "encoding": "pem",
      "lastChangeDate": "2024-01-20T03:48:49.005574Z",
      "lastChangedBy": "6bac97fb-0665-4ba9-b66c-1cf70e074d72",
      "loaded": false,
      "loadedVersion": "",
      "useInPlaceholders": true,
    },
    "esv-test-secret-cert-pem-raw": {
      "_id": "esv-test-secret-cert-pem-raw",
      "activeVersion": "1",
      "description": "This is a test secret from a pem encoded cert file (raw).",
      "encoding": "pem",
      "lastChangeDate": "2024-01-20T03:49:20.270526Z",
      "lastChangedBy": "6bac97fb-0665-4ba9-b66c-1cf70e074d72",
      "loaded": false,
      "loadedVersion": "",
      "useInPlaceholders": true,
    },
    "esv-test-secret-euler": {
      "_id": "esv-test-secret-euler",
      "activeVersion": "1",
      "description": "A test secret containing the value of Euler's number",
      "encoding": "generic",
      "lastChangeDate": "2023-12-14T15:27:34.607038Z",
      "lastChangedBy": "phales@trivir.com",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    "esv-test-secret-file-base64hmac": {
      "_id": "esv-test-secret-file-base64hmac",
      "activeVersion": "1",
      "description": "This is a test secret from base64 encoded hmac key file.",
      "encoding": "base64hmac",
      "lastChangeDate": "2024-01-20T03:46:37.42544Z",
      "lastChangedBy": "6bac97fb-0665-4ba9-b66c-1cf70e074d72",
      "loaded": false,
      "loadedVersion": "",
      "useInPlaceholders": true,
    },
    "esv-test-secret-file-base64hmac-raw": {
      "_id": "esv-test-secret-file-base64hmac-raw",
      "activeVersion": "1",
      "description": "This is a test secret from base64 encoded hmac key file (raw).",
      "encoding": "base64hmac",
      "lastChangeDate": "2024-01-20T03:47:03.695151Z",
      "lastChangedBy": "6bac97fb-0665-4ba9-b66c-1cf70e074d72",
      "loaded": false,
      "loadedVersion": "",
      "useInPlaceholders": true,
    },
    "esv-test-secret-pi": {
      "_id": "esv-test-secret-pi",
      "activeVersion": "1",
      "description": "Secret that contains the value of pi",
      "encoding": "generic",
      "lastChangeDate": "2023-12-14T15:22:28.519043Z",
      "lastChangedBy": "phales@trivir.com",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    "esv-test-secret-pi-generic": {
      "_id": "esv-test-secret-pi-generic",
      "activeVersion": "2",
      "description": "",
      "encoding": "generic",
      "lastChangeDate": "2024-01-20T00:15:02.079462Z",
      "lastChangedBy": "6bac97fb-0665-4ba9-b66c-1cf70e074d72",
      "loaded": false,
      "loadedVersion": "",
      "useInPlaceholders": true,
    },
  },
}
`;
